Wifi part was added to project, but has bug with delete files from microsd card

--- a/2. Firmware/.vscode/settings.json
+++ b/2. Firmware/.vscode/settings.json
@@ -25,6 +25,8 @@
     "*.tcc": "c",
     "adc.h": "c",
     "uart.h": "c",
-    "cstdlib": "c"
+    "cstdlib": "c",
+    "nvs_flash.h": "c",
+    "sta.h": "c"
   }
 }
