--- a/2. Firmware/main/CMakeLists.txt
+++ b/2. Firmware/main/CMakeLists.txt
@@ -6,13 +6,14 @@ idf_component_register(SRCS "main.c"
                         "i2c/pca9536d/pca9536d.c"
                         "i2c/oled_ssd1306/ssd1306.c"
                         "i2c/oled_ssd1306/font.c"
-                        "microsd/mount.c"
+                        "WiFi/sta/sta.c"
+                        "WiFi/ap/ap.c"
+                        "WiFi/wifi.c"
+                        "memory/nvs_and_spiffs.c"
                         "gps/main_gps.c"
                         "gps/nmea_parser.c"
+                        "buttery/battery.c"
                         "gsm/gsm_sim800l.c"
                         "microsd/file_server.c"
-                        "wifi/http.c"
-                        "wifi/wifi.c"
-                        "buttery/battery.c"
-                        "memory/nvs_and_spiffs.c"
+                        "microsd/mount.c"
                        INCLUDE_DIRS ".")
