BUG: on/off wifi

--- a/2. Firmware/.vscode/settings.json
+++ b/2. Firmware/.vscode/settings.json
@@ -27,6 +27,8 @@
     "uart.h": "c",
     "cstdlib": "c",
     "nvs_flash.h": "c",
-    "sta.h": "c"
+    "sta.h": "c",
+    "*.inc": "cpp",
+    "wifi.h": "c"
   }
 }
